<package>
 <name>biotac_logger</name>
  <version>0.1.0</version>
  <description>
    This package subscribes to BioTac data published on the biotac_pub topic and logs the collected data in a text file.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/biotac_logger</url>

  <author email="chuv@grasp.upenn.edu">Vivian Chu</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>biotac_sensors</build_depend>
  <build_depend>rosjson_time</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>biotac_sensors</run_depend>
  <run_depend>rosjson_time</run_depend>

</package>


