<package>
 <name>biotac_sensors</name>
  <version>0.1.0</version>
  <description>
    The biotac_sensors package wraps Syntouch's BioTac / Cheetah C libraries for use with ROS. The object of this package is to continuously collect and publish data read from the BioTac sensors through the Cheetah USB/SPI device.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/biotac_sensors</url>

  <author email="imcmahon@grasp.upenn.edu">Ian McMahon</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cheetah_lib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cheetah_lib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>

