<package>
 <name>rosjson_time</name>
  <version>0.1.0</version>
  <description>
    rosjson_time is a Python library for converting ROS messages to JSON
    (JavaScript Object Notation) representation. This is essentially the
    same as the rosjson package, but modified so that time is not rounded.
    - Ian McMahon/imcmahon@grasp.upenn.edu
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rosjson_time</url>

  <author email="kwc@willowgarage.com">Ken Conley</author>
  <maintainer email="imcmahon@grasp.upenn.edu">Ian McMahon</maintainer>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>

</package>